--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "flowbite": "^1.6.3",
     "svelte-copy": "^1.3.0",
-    "svelte-hash-router": "^1.0.1"
+    "svelte-hash-router": "^1.0.1",
+    "yup": "^1.0.0"
   }
 }
