--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port=18000",
+    "dev": "vite --port=18001",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -19,14 +19,15 @@
     "postcss": "^8.4.21",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
+    "svelte-copy": "^1.3.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "flowbite": "^1.6.3",
-    "svelte-copy": "^1.3.0",
     "svelte-hash-router": "^1.0.1",
     "yup": "^1.0.0"
   }
