--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.3.2",
     "flowbite": "^1.6.3",
     "svelte-hash-router": "^1.0.1",
+    "svelte-hcaptcha": "^0.1.1",
     "yup": "^1.0.0"
   }
 }
