--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
+    "@types/qrcode": "^1.5.5",
     "axios": "^1.3.2",
     "flowbite": "^1.6.3",
+    "qrcode": "^1.5.4",
     "svelte-hash-router": "^1.0.1",
     "svelte-hcaptcha": "^0.1.1",
     "yup": "^1.0.0"
